force-app/main/default/objects/MDMRegRequestBank__c/MDMRegRequestBank__c.object-meta.xml
<CustomObject>
    <label>MDMRegRequestBank</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0000000}</displayFormat>
        <label>MDMRegRequestCustomerBank Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>