force-app/main/default/objects/MDMRegRequestBank__c/fields/PV_BANKL__c.field-meta.xml
<CustomField>
    <fullName>PV_BANKL__c</fullName>
    <label>PV_BANKL</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>002-KR</fullName>
                <label>산업은행(002)</label>
            </value>
            <value>
                <fullName>003-KR</fullName>
                <label>기업은행(003)</label>
            </value>
            <value>
                <fullName>010-KR</fullName>
                <label>농협은행(010)</label>
            </value>
            <value>
                <fullName>013-KR</fullName>
                <label>지역농축협은행(013)</label>
            </value>
            <value>
                <fullName>014-KR</fullName>
                <label>지역농축협은행(014)</label>
            </value>
            <value>
                <fullName>020-KR</fullName>
                <label>우리은행(020)</label>
            </value>
            <value>
                <fullName>025-KR</fullName>
                <label>하나은행(025)</label>
            </value>
            <value>
                <fullName>026-KR</fullName>
                <label>신한은행(026)</label>
            </value>
            <value>
                <fullName>033-KR</fullName>
                <label>하나은행(033)</label>
            </value>
            <value>
                <fullName>036-KR</fullName>
                <label>한국씨티은행(036)</label>
            </value>
            <value>
                <fullName>037-KR</fullName>
                <label>전북은행(037)</label>
            </value>
            <value>
                <fullName>049-KR</fullName>
                <label>신협(049)</label>
            </value>
            <value>
                <fullName>052-KR</fullName>
                <label>모간스탠리(052)</label>
            </value>
            <value>
                <fullName>053-KR</fullName>
                <label>한국씨티은행(053)</label>
            </value>
            <value>
                <fullName>059-KR</fullName>
                <label>미쓰비시도쿄UFJ은행(059)</label>
            </value>
            <value>
                <fullName>062-KR</fullName>
                <label>중국공상은행(062)</label>
            </value>
            <value>
                <fullName>064-KR</fullName>
                <label>산림조합(064)</label>
            </value>
            <value>
                <fullName>076-KR</fullName>
                <label>신용보증기금(076)</label>
            </value>
            <value>
                <fullName>079-KR</fullName>
                <label>국민은행(079)</label>
            </value>
            <value>
                <fullName>081-KR</fullName>
                <label>하나은행(081)</label>
            </value>
            <value>
                <fullName>088-KR</fullName>
                <label>신한(088)</label>
            </value>
            <value>
                <fullName>218-KR</fullName>
                <label>현대증권(218)</label>
            </value>
            <value>
                <fullName>230-KR</fullName>
                <label>미래에셋증권(230)</label>
            </value>
            <value>
                <fullName>262-KR</fullName>
                <label>하이투자증권(262)</label>
            </value>
            <value>
                <fullName>264-KR</fullName>
                <label>키움증권(264)</label>
            </value>
            <value>
                <fullName>265-KR</fullName>
                <label>이트레이드증권(265)</label>
            </value>
            <value>
                <fullName>266-KR</fullName>
                <label>에스케이증권(266)</label>
            </value>
            <value>
                <fullName>267-KR</fullName>
                <label>대신증권(267)</label>
            </value>
            <value>
                <fullName>268-KR</fullName>
                <label>아이엠투자증권(268)</label>
            </value>
            <value>
                <fullName>269-KR</fullName>
                <label>한화투자증권(269)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>