force-app/main/default/objects/MDMRegRequestBank__c/fields/PV_BANKL_lu__c.field-meta.xml
<CustomField>
    <fullName>PV_BANKL_lu__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>은행 키
GroupId : BANKL</description>
    <label>PV_BANKL_lu</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>MDMReferenceCode__c.GROUPID__c</field>
            <operation>equals</operation>
            <value>BANKL</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>MDMReferenceCode__c</referenceTo>
    <relationshipLabel>MDMRegRequestBank</relationshipLabel>
    <relationshipName>MDMRegRequestBank_PV_BANKL</relationshipName>
    <type>Lookup</type>
</CustomField>