force-app/main/default/objects/MDMRegRequestBank__c/fields/PV_BANKN__c.field-meta.xml
<CustomField>
    <fullName>PV_BANKN__c</fullName>
    <label>PV_BANKN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>