force-app/main/default/objects/MDMRegRequestBank__c/fields/PV_BKONT_lu__c.field-meta.xml
<CustomField>
    <fullName>PV_BKONT_lu__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>은행관리키
GroupId : ZFITBKONT</description>
    <label>PV_BKONT_lu</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>MDMReferenceCode__c.GROUPID__c</field>
            <operation>equals</operation>
            <value>ZFITBKONT</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>MDMReferenceCode__c</referenceTo>
    <relationshipLabel>MDMRegRequestBank (PV_BKONT_lu)</relationshipLabel>
    <relationshipName>MDMRegRequestBank_PV_BKONT</relationshipName>
    <type>Lookup</type>
</CustomField>