force-app/main/default/objects/MDMRegRequestBank__c/fields/PV_BKREF__c.field-meta.xml
<CustomField>
    <fullName>PV_BKREF__c</fullName>
    <label>PV_BKREF</label>
    <length>50</length>
    <type>Text</type>
</CustomField>