force-app/main/default/objects/MDMRegRequestBank__c/fields/PV_BVTYP__c.field-meta.xml
<CustomField>
    <fullName>PV_BVTYP__c</fullName>
    <label>PV_BVTYP</label>
    <length>5</length>
    <type>Text</type>
</CustomField>